test/parserTest/pass/test12.ic
//testing multiple class declarations within a program
class FirstClass {
	int x;
	
	int firstMethod () {
		return 0;
	}
	
	void main (string [] args) {
	
	}
}

class SecondClass {
	string s;
	
	void main (string [] args) {
	
	}
}

class ThirdClass {
	boolean b;
	
	void main (string [] args) {
	
	}
}
