test/parserTest/fail/test12.ic
class BadArrayAccess extends MoreBadness {
	int [] nums;
	boolean condition;
	
	void main (string [] args) {
		int x = this.nums[if (condition) {return 0;} else {return 1;}];
	}
}